--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.20.0",
     "framer-motion": "^2.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
