--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "semsm-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "11.15.0"
+  },
   "dependencies": {
     "@livechat/ui-kit": "^0.4.0-10",
     "@material-ui/core": "^4.11.0",
