--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semsm-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://emanherawy.github.io/semsm",
+  "homepage": "https://emanherawy.github.io/semsm-app",
   "dependencies": {
     "@livechat/ui-kit": "^0.4.0-10",
     "@material-ui/core": "^4.11.0",
