--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "semsm",
-  "version": "1.2.0",
+  "version": "1.1.0",
+  "homepage": "https://open-semsem.github.io/semsm-app",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
