--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "classnames": "2.2.6",
+    "gh-pages": "^3.1.0",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
