--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-toastify": "^6.0.8",
     "reactstrap": "8.4.1",
     "styled-components": "^5.2.0",
     "typeface-poppins": "0.0.72"
