--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-chatbot-kit": "^1.0.6",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-redux": "^7.2.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^6.0.8",
     "reactstrap": "8.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "typeface-poppins": "0.0.72"
   },
