--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "homepage": "https://open-semsem.github.io/semsm-app",
   "private": true,
   "dependencies": {
+    "@isomorphic-git/lightning-fs": "^4.3.0",
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
     "classnames": "2.2.6",
     "gh-pages": "^3.1.0",
+    "isomorphic-git": "^1.0.0-beta.36",
+    "jszip": "^3.5.0",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
