--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "semsm",
-  "version": "1.1.0",
-  "homepage": "https://open-semsem.github.io/semsm-app",
+  "name": "react_usinghooks",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@isomorphic-git/lightning-fs": "^4.3.0",
     "@material-ui/core": "^4.11.0",
-    "axios": "^0.20.0",
     "classnames": "2.2.6",
     "gh-pages": "^3.1.0",
+    "i18next": "19.5.0",
+    "i18next-browser-languagedetector": "5.0.0",
+    "i18next-http-backend": "1.0.15",
     "isomorphic-git": "^1.0.0-beta.36",
     "jszip": "^3.5.0",
     "moment": "2.26.0",
@@ -19,6 +20,7 @@
     "react-chatbot-kit": "^1.0.6",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-i18next": "11.3.4",
     "react-redux": "^7.2.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
@@ -32,33 +34,22 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile-sass": "node-sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.css",
-    "minify-sass": "node-sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.min.css --output-style compressed",
-    "map-sass": "node-sass src/assets/scss/paper-kit.scss src/assets/css/paper-kit.css --source-map true"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">1%",
+      "last 4 versions",
+      "Firefox ESR",
+      "not ie < 11"
     ]
-  },
-  "optionalDependencies": {
-    "typescript": "3.9.5"
   },
   "devDependencies": {
     "gulp": "4.0.2",
