--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_usinghooks",
+  "name": "semsm",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-bootstrap-switch": "15.5.3",
     "react-chatbot-kit": "^1.0.6",
+    "react-d3-tree": "^1.16.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
     "react-i18next": "11.3.4",
